<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBECEE">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0080FF"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="20dp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_left"/>


            <TextView
                android:id="@+id/form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/tambah_catatan"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/et_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:inputType="date"
        android:textSize="15sp"
        android:autofillHints="@android:string/autofill"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/llViewTitle"
        android:background="@drawable/custom_input"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="12dp"
        android:hint="@string/tanggal"
        android:textColor="#000"
        android:textColorHint="#6B7280"
        android:drawableTint="#6B7280"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="12dp"
        android:focusable="false"/>

    <EditText
        android:id="@+id/et_gross_provit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:textSize="15sp"
        android:inputType="numberDecimal"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="@android:string/autofill"
        app:layout_constraintTop_toBottomOf="@+id/et_date"
        android:background="@drawable/custom_input"
        android:textColor="#000"
        android:textColorHint="#6B7280"
        android:drawableTint="#6B7280"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="12dp"
        android:drawableStart="@drawable/ic_money"
        android:drawablePadding="12dp"
        android:hint="@string/pendapatan" />

    <EditText
        android:id="@+id/et_expenditure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:textSize="15sp"
        android:inputType="numberDecimal"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="@android:string/autofill"
        app:layout_constraintTop_toBottomOf="@+id/et_gross_provit"
        android:background="@drawable/custom_input"
        android:textColor="#000"
        android:textColorHint="#6B7280"
        android:drawableTint="#6B7280"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="12dp"
        android:drawableStart="@drawable/ic_money_off"
        android:drawablePadding="12dp"
        android:hint="@string/pengeluaran" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/simpan"
        android:padding="13dp"
        app:layout_constraintTop_toBottomOf="@id/et_expenditure" />

</androidx.constraintlayout.widget.ConstraintLayout>